test/files/neg/bug3683a.check
bug3683a.scala:14: error: match is not exhaustive!
missing combination             XX

    w match {
    ^
one error found
